[gd_scene load_steps=122 format=2]

[ext_resource path="res://content/monster/scarab/Scarab.gd" type="Script" id=1]
[ext_resource path="res://content/monster/scarab/sheet.png" type="Texture" id=2]
[ext_resource path="res://content/sounds/monster/Scarab/FastShot_01.wav" type="AudioStream" id=3]
[ext_resource path="res://content/sounds/monster/Scarab/FastShot_02.wav" type="AudioStream" id=4]
[ext_resource path="res://content/sounds/monster/Scarab/FastShot_03.wav" type="AudioStream" id=5]
[ext_resource path="res://content/sounds/monster/Scarab/FastShot_04.wav" type="AudioStream" id=6]
[ext_resource path="res://content/sounds/monster/Scarab/SplitSound.wav" type="AudioStream" id=7]
[ext_resource path="res://content/sounds/monster/Scarab/scarabshoot.wav" type="AudioStream" id=8]
[ext_resource path="res://content/sounds/monster/Scarab/Death.wav" type="AudioStream" id=9]
[ext_resource path="res://content/sounds/monster/Scarab/InvunerableEnd.wav" type="AudioStream" id=10]
[ext_resource path="res://content/sounds/monster/Scarab/InvunerableHold.wav" type="AudioStream" id=11]
[ext_resource path="res://content/sounds/monster/Scarab/InvunerableSfx.wav" type="AudioStream" id=12]
[ext_resource path="res://content/sounds/Bastards/sfx_kick01.wav" type="AudioStream" id=13]
[ext_resource path="res://content/sounds/Bastards/GravityTopping04_07.wav" type="AudioStream" id=14]
[ext_resource path="res://content/sounds/Bastards/GravityTopping04_08.wav" type="AudioStream" id=15]
[ext_resource path="res://systems/audio/Sound.gd" type="Script" id=16]
[ext_resource path="res://content/sounds/Bastards/GravityTopping04_11.wav" type="AudioStream" id=17]
[ext_resource path="res://content/sounds/monster/Scarab/Getsmall.wav" type="AudioStream" id=18]
[ext_resource path="res://content/monster/FlashMaterial.tres" type="Material" id=30]

[sub_resource type="CapsuleShape2D" id=3]
radius = 12.1325
height = 51.76

[sub_resource type="CapsuleShape2D" id=288]
radius = 12.1325
height = 51.76

[sub_resource type="CircleShape2D" id=289]
radius = 19.799

[sub_resource type="CircleShape2D" id=290]
radius = 31.6228

[sub_resource type="AtlasTexture" id=265]
atlas = ExtResource( 2 )
region = Rect2( 0, 1392, 148, 116 )

[sub_resource type="AtlasTexture" id=266]
atlas = ExtResource( 2 )
region = Rect2( 148, 1392, 148, 116 )

[sub_resource type="AtlasTexture" id=267]
atlas = ExtResource( 2 )
region = Rect2( 296, 1392, 148, 116 )

[sub_resource type="AtlasTexture" id=268]
atlas = ExtResource( 2 )
region = Rect2( 444, 1392, 148, 116 )

[sub_resource type="AtlasTexture" id=269]
atlas = ExtResource( 2 )
region = Rect2( 592, 1392, 148, 116 )

[sub_resource type="AtlasTexture" id=270]
atlas = ExtResource( 2 )
region = Rect2( 740, 1392, 148, 116 )

[sub_resource type="AtlasTexture" id=271]
atlas = ExtResource( 2 )
region = Rect2( 888, 1392, 148, 116 )

[sub_resource type="AtlasTexture" id=272]
atlas = ExtResource( 2 )
region = Rect2( 1036, 1392, 148, 116 )

[sub_resource type="AtlasTexture" id=273]
atlas = ExtResource( 2 )
region = Rect2( 1184, 1392, 148, 116 )

[sub_resource type="AtlasTexture" id=274]
atlas = ExtResource( 2 )
region = Rect2( 1332, 1392, 148, 116 )

[sub_resource type="AtlasTexture" id=228]
atlas = ExtResource( 2 )
region = Rect2( 0, 1624, 148, 116 )

[sub_resource type="AtlasTexture" id=229]
atlas = ExtResource( 2 )
region = Rect2( 148, 1624, 148, 116 )

[sub_resource type="AtlasTexture" id=230]
atlas = ExtResource( 2 )
region = Rect2( 296, 1624, 148, 116 )

[sub_resource type="AtlasTexture" id=231]
atlas = ExtResource( 2 )
region = Rect2( 444, 1624, 148, 116 )

[sub_resource type="AtlasTexture" id=232]
atlas = ExtResource( 2 )
region = Rect2( 592, 1624, 148, 116 )

[sub_resource type="AtlasTexture" id=233]
atlas = ExtResource( 2 )
region = Rect2( 740, 1624, 148, 116 )

[sub_resource type="AtlasTexture" id=234]
atlas = ExtResource( 2 )
region = Rect2( 888, 1624, 148, 116 )

[sub_resource type="AtlasTexture" id=235]
atlas = ExtResource( 2 )
region = Rect2( 1036, 1624, 148, 116 )

[sub_resource type="AtlasTexture" id=236]
atlas = ExtResource( 2 )
region = Rect2( 1184, 1624, 148, 116 )

[sub_resource type="AtlasTexture" id=237]
atlas = ExtResource( 2 )
region = Rect2( 1332, 1624, 148, 116 )

[sub_resource type="AtlasTexture" id=238]
atlas = ExtResource( 2 )
region = Rect2( 1480, 1624, 148, 116 )

[sub_resource type="AtlasTexture" id=299]
atlas = ExtResource( 2 )
region = Rect2( 2220, 812, 148, 116 )

[sub_resource type="AtlasTexture" id=300]
atlas = ExtResource( 2 )
region = Rect2( 2368, 812, 148, 116 )

[sub_resource type="AtlasTexture" id=301]
atlas = ExtResource( 2 )
region = Rect2( 2516, 812, 148, 116 )

[sub_resource type="AtlasTexture" id=302]
atlas = ExtResource( 2 )
region = Rect2( 2664, 812, 148, 116 )

[sub_resource type="AtlasTexture" id=303]
atlas = ExtResource( 2 )
region = Rect2( 2812, 812, 148, 116 )

[sub_resource type="AtlasTexture" id=304]
atlas = ExtResource( 2 )
region = Rect2( 2960, 812, 148, 116 )

[sub_resource type="AtlasTexture" id=305]
atlas = ExtResource( 2 )
region = Rect2( 3108, 812, 148, 116 )

[sub_resource type="AtlasTexture" id=306]
atlas = ExtResource( 2 )
region = Rect2( 3256, 812, 148, 116 )

[sub_resource type="AtlasTexture" id=307]
atlas = ExtResource( 2 )
region = Rect2( 3404, 812, 148, 116 )

[sub_resource type="AtlasTexture" id=308]
atlas = ExtResource( 2 )
region = Rect2( 3552, 812, 148, 116 )

[sub_resource type="AtlasTexture" id=309]
atlas = ExtResource( 2 )
region = Rect2( 3700, 812, 148, 116 )

[sub_resource type="AtlasTexture" id=310]
atlas = ExtResource( 2 )
region = Rect2( 3848, 812, 148, 116 )

[sub_resource type="AtlasTexture" id=275]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 148, 116 )

[sub_resource type="AtlasTexture" id=276]
atlas = ExtResource( 2 )
region = Rect2( 148, 0, 148, 116 )

[sub_resource type="AtlasTexture" id=277]
atlas = ExtResource( 2 )
region = Rect2( 296, 0, 148, 116 )

[sub_resource type="AtlasTexture" id=278]
atlas = ExtResource( 2 )
region = Rect2( 444, 0, 148, 116 )

[sub_resource type="AtlasTexture" id=279]
atlas = ExtResource( 2 )
region = Rect2( 592, 0, 148, 116 )

[sub_resource type="AtlasTexture" id=280]
atlas = ExtResource( 2 )
region = Rect2( 740, 0, 148, 116 )

[sub_resource type="AtlasTexture" id=281]
atlas = ExtResource( 2 )
region = Rect2( 888, 0, 148, 116 )

[sub_resource type="AtlasTexture" id=282]
atlas = ExtResource( 2 )
region = Rect2( 1036, 0, 148, 116 )

[sub_resource type="AtlasTexture" id=283]
atlas = ExtResource( 2 )
region = Rect2( 1184, 0, 148, 116 )

[sub_resource type="AtlasTexture" id=284]
atlas = ExtResource( 2 )
region = Rect2( 1332, 0, 148, 116 )

[sub_resource type="AtlasTexture" id=285]
atlas = ExtResource( 2 )
region = Rect2( 1480, 0, 148, 116 )

[sub_resource type="AtlasTexture" id=286]
atlas = ExtResource( 2 )
region = Rect2( 1628, 0, 148, 116 )

[sub_resource type="AtlasTexture" id=287]
atlas = ExtResource( 2 )
region = Rect2( 1776, 0, 148, 116 )

[sub_resource type="AtlasTexture" id=291]
atlas = ExtResource( 2 )
region = Rect2( 1332, 812, 148, 116 )

[sub_resource type="AtlasTexture" id=292]
atlas = ExtResource( 2 )
region = Rect2( 1480, 812, 148, 116 )

[sub_resource type="AtlasTexture" id=293]
atlas = ExtResource( 2 )
region = Rect2( 1628, 812, 148, 116 )

[sub_resource type="AtlasTexture" id=294]
atlas = ExtResource( 2 )
region = Rect2( 1776, 812, 148, 116 )

[sub_resource type="AtlasTexture" id=295]
atlas = ExtResource( 2 )
region = Rect2( 1924, 812, 148, 116 )

[sub_resource type="AtlasTexture" id=296]
atlas = ExtResource( 2 )
region = Rect2( 2072, 812, 148, 116 )

[sub_resource type="AtlasTexture" id=297]
atlas = ExtResource( 2 )
region = Rect2( 2220, 812, 148, 116 )

[sub_resource type="AtlasTexture" id=298]
atlas = ExtResource( 2 )
region = Rect2( 2368, 812, 148, 116 )

[sub_resource type="AtlasTexture" id=213]
atlas = ExtResource( 2 )
region = Rect2( 0, 1508, 148, 116 )

[sub_resource type="AtlasTexture" id=214]
atlas = ExtResource( 2 )
region = Rect2( 148, 1508, 148, 116 )

[sub_resource type="AtlasTexture" id=215]
atlas = ExtResource( 2 )
region = Rect2( 296, 1508, 148, 116 )

[sub_resource type="AtlasTexture" id=216]
atlas = ExtResource( 2 )
region = Rect2( 444, 1508, 148, 116 )

[sub_resource type="AtlasTexture" id=217]
atlas = ExtResource( 2 )
region = Rect2( 592, 1508, 148, 116 )

[sub_resource type="AtlasTexture" id=218]
atlas = ExtResource( 2 )
region = Rect2( 740, 1508, 148, 116 )

[sub_resource type="AtlasTexture" id=219]
atlas = ExtResource( 2 )
region = Rect2( 888, 1508, 148, 116 )

[sub_resource type="AtlasTexture" id=220]
atlas = ExtResource( 2 )
region = Rect2( 1036, 1508, 148, 116 )

[sub_resource type="AtlasTexture" id=221]
atlas = ExtResource( 2 )
region = Rect2( 1184, 1508, 148, 116 )

[sub_resource type="AtlasTexture" id=222]
atlas = ExtResource( 2 )
region = Rect2( 1332, 1508, 148, 116 )

[sub_resource type="AtlasTexture" id=223]
atlas = ExtResource( 2 )
region = Rect2( 1480, 1508, 148, 116 )

[sub_resource type="AtlasTexture" id=224]
atlas = ExtResource( 2 )
region = Rect2( 1628, 1508, 148, 116 )

[sub_resource type="AtlasTexture" id=225]
atlas = ExtResource( 2 )
region = Rect2( 1776, 1508, 148, 116 )

[sub_resource type="AtlasTexture" id=226]
atlas = ExtResource( 2 )
region = Rect2( 1924, 1508, 148, 116 )

[sub_resource type="AtlasTexture" id=227]
atlas = ExtResource( 2 )
region = Rect2( 2072, 1508, 148, 116 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 2 )
region = Rect2( 0, 1276, 148, 116 )

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 2 )
region = Rect2( 148, 1276, 148, 116 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 2 )
region = Rect2( 296, 1276, 148, 116 )

[sub_resource type="AtlasTexture" id=107]
atlas = ExtResource( 2 )
region = Rect2( 444, 1276, 148, 116 )

[sub_resource type="AtlasTexture" id=108]
atlas = ExtResource( 2 )
region = Rect2( 592, 1276, 148, 116 )

[sub_resource type="AtlasTexture" id=109]
atlas = ExtResource( 2 )
region = Rect2( 740, 1276, 148, 116 )

[sub_resource type="AtlasTexture" id=110]
atlas = ExtResource( 2 )
region = Rect2( 888, 1276, 148, 116 )

[sub_resource type="AtlasTexture" id=111]
atlas = ExtResource( 2 )
region = Rect2( 1036, 1276, 148, 116 )

[sub_resource type="AtlasTexture" id=112]
atlas = ExtResource( 2 )
region = Rect2( 1184, 1276, 148, 116 )

[sub_resource type="AtlasTexture" id=113]
atlas = ExtResource( 2 )
region = Rect2( 1332, 1276, 148, 116 )

[sub_resource type="AtlasTexture" id=114]
atlas = ExtResource( 2 )
region = Rect2( 1480, 1276, 148, 116 )

[sub_resource type="AtlasTexture" id=115]
atlas = ExtResource( 2 )
region = Rect2( 1628, 1276, 148, 116 )

[sub_resource type="AtlasTexture" id=116]
atlas = ExtResource( 2 )
region = Rect2( 1776, 1276, 148, 116 )

[sub_resource type="AtlasTexture" id=117]
atlas = ExtResource( 2 )
region = Rect2( 1924, 1276, 148, 116 )

[sub_resource type="AtlasTexture" id=118]
atlas = ExtResource( 2 )
region = Rect2( 2072, 1276, 148, 116 )

[sub_resource type="AtlasTexture" id=119]
atlas = ExtResource( 2 )
region = Rect2( 2220, 1276, 148, 116 )

[sub_resource type="AtlasTexture" id=120]
atlas = ExtResource( 2 )
region = Rect2( 2368, 1276, 148, 116 )

[sub_resource type="AtlasTexture" id=121]
atlas = ExtResource( 2 )
region = Rect2( 2516, 1276, 148, 116 )

[sub_resource type="AtlasTexture" id=311]
atlas = ExtResource( 2 )
region = Rect2( 0, 812, 148, 116 )

[sub_resource type="AtlasTexture" id=312]
atlas = ExtResource( 2 )
region = Rect2( 148, 812, 148, 116 )

[sub_resource type="AtlasTexture" id=313]
atlas = ExtResource( 2 )
region = Rect2( 296, 812, 148, 116 )

[sub_resource type="AtlasTexture" id=314]
atlas = ExtResource( 2 )
region = Rect2( 444, 812, 148, 116 )

[sub_resource type="AtlasTexture" id=315]
atlas = ExtResource( 2 )
region = Rect2( 592, 812, 148, 116 )

[sub_resource type="AtlasTexture" id=316]
atlas = ExtResource( 2 )
region = Rect2( 740, 812, 148, 116 )

[sub_resource type="AtlasTexture" id=317]
atlas = ExtResource( 2 )
region = Rect2( 888, 812, 148, 116 )

[sub_resource type="AtlasTexture" id=318]
atlas = ExtResource( 2 )
region = Rect2( 1036, 812, 148, 116 )

[sub_resource type="AtlasTexture" id=319]
atlas = ExtResource( 2 )
region = Rect2( 1184, 812, 148, 116 )

[sub_resource type="AtlasTexture" id=320]
atlas = ExtResource( 2 )
region = Rect2( 1332, 812, 148, 116 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 265 ), SubResource( 266 ), SubResource( 267 ), SubResource( 268 ), SubResource( 269 ), SubResource( 270 ), SubResource( 271 ), SubResource( 272 ), SubResource( 273 ), SubResource( 274 ) ],
"loop": false,
"name": "armoff",
"speed": 10.0
}, {
"frames": [ SubResource( 228 ), SubResource( 229 ), SubResource( 230 ), SubResource( 231 ), SubResource( 232 ), SubResource( 233 ), SubResource( 234 ), SubResource( 235 ), SubResource( 236 ), SubResource( 237 ), SubResource( 238 ), null ],
"loop": false,
"name": "die",
"speed": 10.0
}, {
"frames": [ SubResource( 299 ), SubResource( 300 ), SubResource( 301 ), SubResource( 302 ), SubResource( 303 ), SubResource( 304 ), SubResource( 305 ), SubResource( 306 ), SubResource( 307 ), SubResource( 308 ), SubResource( 309 ), SubResource( 310 ) ],
"loop": true,
"name": "grow",
"speed": 10.0
}, {
"frames": [ SubResource( 275 ), SubResource( 276 ), SubResource( 277 ), SubResource( 278 ), SubResource( 279 ), SubResource( 280 ), SubResource( 281 ), SubResource( 282 ), SubResource( 283 ), SubResource( 284 ), SubResource( 285 ), SubResource( 286 ), SubResource( 287 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ SubResource( 291 ), SubResource( 292 ), SubResource( 293 ), SubResource( 294 ), SubResource( 295 ), SubResource( 296 ), SubResource( 297 ), SubResource( 298 ) ],
"loop": true,
"name": "protected",
"speed": 10.0
}, {
"frames": [ SubResource( 213 ), SubResource( 214 ), SubResource( 215 ), SubResource( 216 ), SubResource( 217 ), SubResource( 218 ), SubResource( 219 ), SubResource( 220 ), SubResource( 221 ), SubResource( 222 ), SubResource( 223 ), SubResource( 224 ), SubResource( 225 ), SubResource( 226 ), SubResource( 227 ) ],
"loop": true,
"name": "quickshot",
"speed": 10.0
}, {
"frames": [ SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ), SubResource( 110 ), SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ), SubResource( 120 ), SubResource( 121 ) ],
"loop": true,
"name": "shoot",
"speed": 10.0
}, {
"frames": [ SubResource( 311 ), SubResource( 312 ), SubResource( 313 ), SubResource( 314 ), SubResource( 315 ), SubResource( 316 ), SubResource( 317 ), SubResource( 318 ), SubResource( 319 ), SubResource( 320 ) ],
"loop": false,
"name": "shrink",
"speed": 10.0
} ]

[node name="Scarab" type="Area2D" groups=["monster"]]
collision_layer = 128
collision_mask = 0
script = ExtResource( 1 )
techId = "scarab"

[node name="HitboxDefault1" type="CollisionShape2D" parent="."]
position = Vector2( -17, -9.53674e-07 )
rotation = 0.610865
shape = SubResource( 3 )

[node name="HitboxDefault2" type="CollisionShape2D" parent="."]
position = Vector2( 16, -9.53674e-07 )
rotation = 2.53073
shape = SubResource( 288 )

[node name="HitboxQuickshot" type="CollisionShape2D" parent="."]
position = Vector2( -1, -10 )
rotation = 2.53073
shape = SubResource( 289 )

[node name="HitboxProtected" type="CollisionShape2D" parent="."]
position = Vector2( 1, 0 )
rotation = 2.53073
shape = SubResource( 290 )

[node name="Sprite" type="AnimatedSprite" parent="."]
material = ExtResource( 30 )
position = Vector2( -3, -15 )
frames = SubResource( 4 )
animation = "grow"
frame = 8

[node name="MassShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -1.311
pitch_scale = 0.85
bus = "Sounds"
script = ExtResource( 16 )
randomPitch = 0.0

[node name="MassShootSound2" type="AudioStreamPlayer" parent="MassShootSound"]
stream = ExtResource( 13 )
volume_db = 3.496
pitch_scale = 1.05
bus = "Important"
script = ExtResource( 16 )
randomPitch = 0.0

[node name="MassShootSound3" type="AudioStreamPlayer" parent="MassShootSound"]
volume_db = 3.496
pitch_scale = 0.4
script = ExtResource( 16 )
randomPitch = 0.0
streams = [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 17 ) ]

[node name="SplitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 6.118
pitch_scale = 1.17
bus = "Important"
script = ExtResource( 16 )
randomPitch = 0.0

[node name="SplitSound2" type="AudioStreamPlayer" parent="SplitSound"]
stream = ExtResource( 13 )
volume_db = 2.622
pitch_scale = 1.09
script = ExtResource( 16 )
randomPitch = 0.0

[node name="EnterSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -8.302
pitch_scale = 0.23
bus = "Important"
script = ExtResource( 16 )
randomPitch = 0.0

[node name="PreMassShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
volume_db = -8.302
pitch_scale = 1.01
script = ExtResource( 16 )
randomPitch = 0.0

[node name="QuickShotSound" type="AudioStreamPlayer" parent="."]
volume_db = -5.615
script = ExtResource( 16 )
randomPitch = 0.0
streams = [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ]

[node name="DieSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = 3.496
bus = "Important"
script = ExtResource( 16 )
randomPitch = 0.0

[node name="InvulnerableStartSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = 2.622
pitch_scale = 0.8
bus = "World"
script = ExtResource( 16 )
randomPitch = 0.0

[node name="InvulnerableStopSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = 2.622
pitch_scale = 0.74
bus = "Important"
script = ExtResource( 16 )
randomPitch = 0.0

[node name="InvulnerableHoldSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = 1.748
bus = "World"
script = ExtResource( 16 )
randomPitch = 0.0
fadeInTime = 0.5
fadeOutTime = 0.5

[node name="PositionBigProjectile" type="Position2D" parent="."]
position = Vector2( -1, -34 )

[node name="LeftArm" type="Position2D" parent="."]
position = Vector2( -19, 3 )

[node name="RightArm" type="Position2D" parent="."]
position = Vector2( 20, 4 )

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="frame_changed" from="Sprite" to="." method="_on_Sprite_frame_changed"]
